# maximal

./: .dependency-cruiser.cjs  .design-context.md  .gitignore  .trufflehog-exclude  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTORS.md  Dockerfile.claude  LICENSE  NOTICE.md  README.md  README.zh-CN.md  THIRD-PARTY-LICENSE  bunfig.toml  claude-cleanup.sh  docker-compose.yml  eslint.config.js  knip.json  package.json  release-please-config.json  stryker.conf.json  tsconfig.json  tsdown.config.ts  tsdown.desktop.config.ts
.claude-plugin/: marketplace.json
.github/codeql/: codeql-config.yml
.github/workflows/: bot-check.yml  ci.yml  codeql-reconcile.yml  codeql.yml  deploy-pages.yml  installers.yml  macos-build.yml  release-desktop.yml  release-docker.yml  release-please.yml  release.yml  rust-tests.yml  secret-scan.yml  site-ci.yml  site-pin.yml  tauri-macos.yml  tooling-ci.yml  triage.yml  watch-external-drift.yml  windows-installer-dev.yml  windows-shell-dev.yml
.macos-builder/: build.sh  config
.opencode/plugins/: subagent-marker.js
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
contrib/: README.md
contrib/ollama-anthropic-spike/: NOTES.md  README.md  smoke.ts
contrib/opencode-copilot/: auth.ts  opencode-copilot-auth.index.mjs
desktop/: electron.vite.config.ts  index.html  package.json  tsconfig.base.json  tsconfig.node.json  tsconfig.web.json
desktop/electron/: auth.ts  i18n.ts  ipc-handlers.ts  main.ts  preload.ts  server-manager.ts  settings-store.ts
desktop/src/: App.tsx  main.tsx
docs/: architecture.md  bun-version-policy.md  code-style.md  codegen-feedback-loops-practices.md  commands.md  dashboard-window-prd.md  design-feedback-loops-practices.md  design-stack-vite-playwright.md  first-run-setup-prd.md  plugins.md  realtime-codegen-feedback-prd.md  release-runbook.md  repo-cleanup-2026-05.md  settings-window-prd.md  squint-test-prd.md  stop-hook-prd.md  tauri-icons-prd.md  winget-support-research.md
docs/admin/: claude-desktop-mdm.md  external-drift-watch.md
docs/decisions/: 0001-codeql-by-design-dismissals.md  0002-api-clients-react-island.md  0003-max-wrapper-and-cleanup-gaps.md  0004-unify-shell-ui-on-react-islands.md  0005-share-settings-types-shell-proxy.md  0006-auth-status-discriminated-union.md  0007-sidecar-sse-events.md  0008-design-tokens-single-source.md  0009-app-integration-interface.md  0010-effective-config-read-api.md  0011-mock-module-leakage-discipline.md  0012-state-matrix-specs-for-shell-flows.md  0013-split-tauri-lib-rs.md  0014-no-rewrite-in-go.md  0015-claude-code-ungraceful-exit-gap.md  0016-copilot-provider-coupling-and-api-divergence.md  0017-anthropic-beta-agentic-tree-unsupported.md  0018-browser-tab-ui-delivery.md  0018-openapi-client-facing-scope.md  0019-websocket-transport-and-presence-registry.md  0020-single-history-routing-invariant.md  0021-control-surface-hardening.md  0022-per-model-tuning-consolidation-parked.md  site-runtime-version-manifest.md
docs/design/: aesthetic.md  change-checklists.md  color.md  components.md  failure-modes.md  keyboard.md  layout.md  motion.md  network-banner-preview.html  principles.md  tokens.md  type.md  windows.md
docs/dev/: beta-channel-and-safe-build-testing.md  i18n.md  live-test-build-checklist.md  network-blocked-auth.md  project-health-audit-2026-07.md  self-updater.md  single-window-scaffold.md  testing-strategy.md  (+1 more)
pages/: index.html
reports/: baseline-README.md  baseline-before.json  baseline-live-v0.4.39-gap30s.json  baseline-live-v0.4.39-warm1.json  baseline-live-v0.4.39-warm2.json  baseline-live-v0.4.39-warm3.json  baseline-live-v0.4.39.json
research_log/: 2026-06-22-claude-desktop-macos-failure-modes.md  2026-07-03-anthropic-models-schema.md
scripts/: app-dev-prepare.ts  build-sidecar.ts  build-ui.ts  check-design-tokens.ts  embed-build-info.ts  embed-usage-viewer.ts  ensure-ui-embed-stub.ts  find-casts.ts  gemma-watch.context.md  gemma-watch.ts  gen-ui-embed.ts  generate-css-tokens.ts  install-cowork-egress.sh  max  package-dmg.ts  predmg-cleanup.ts  reconcile-codeql.ts  sbom.ts  secret-scan.sh  sync-homebrew-formula.ts  ui-harness-fixtures.ts  ui-harness.ts  write-updates-manifest.ts
shell/: .gitignore  SPIKE.md  bunfig.toml  index.html  package.json  setup.html  splash.html  tsconfig.json  update-confirm.html  vite.config.ts
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: default.json  loopback.json
shell/src-tauri/dmg/: background.tiff  build-background.sh
shell/src-tauri/icons/: icon.icns
shell/src-tauri/permissions/: default.toml
shell/src-tauri/src/: commands.rs  decisions.rs  lib.rs  main.rs  native_i18n.rs  sidecar.rs  state.rs  tray.rs  updater.rs  windows.rs
site/: README.md  astro.config.mjs  markdoc.config.mjs  package.json  tsconfig.json
src/: assets.d.ts  auth.ts  check-usage.ts  configure-claude-code.ts  configure-claude-desktop.ts  debug.ts  main.ts  print-shell-key.ts  server.ts  setup-status-cmd.ts  setup.ts  start.ts  uninstall.ts
tests/: abortable-sleep.test.ts  account-section.test.ts  accounts-route.test.ts  active-clients.test.ts  agent-initiator.test.ts  anthropic-id-rewrite.test.ts  anthropic-request.test.ts  anthropic-response.test.ts  api-config.test.ts  api-key-helper.test.ts  api-keys-route.test.ts  apps-cli.test.ts  apps-detect.test.ts  apps-route.test.ts  apps-shim.test.ts  atomic-json-write.test.ts  auth-controller-events.test.ts  auth-controller-lifecycle.test.ts  auth-controller.test.ts  auth-fetch.test.ts  auth-recovery.test.ts  auth-route.test.ts  auth-status-contract.test.ts  auth-types.test.ts  boot-status.test.ts  build-info.test.ts  cache.test.ts  chat-completions-handler.test.ts  claude-code-cli-enable-persist.test.ts  claude-code-reconcile.test.ts  claude-code-settings.test.ts  claude-desktop-3p-config.test.ts  claude-desktop-config.test.ts  claude-shim-cleanup.test.ts  cli-branding.test.ts  cli-path.test.ts  clients-route.test.ts  completion-rejection.test.ts  config-load-migrate.test.ts  config-migration.test.ts  (+122 more)
(+433 files in other folders)
