[package]
name = "shell"
version = "0.1.0"
description = "Maximal tray + dashboard"
authors = ["stuffbucket"]
edition = "2021"

[lib]
name = "shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` feature gives us TrayIconBuilder; default features bring
# in the menu/window APIs we use below.
# `image-png` enables `Image::from_bytes` for the embedded tray-icon
# PNGs we swap on state transitions.
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
# `tauri-plugin-shell` provides the sidecar spawn API that uses the
# arch-suffixed binaries declared in bundle.externalBin.
tauri-plugin-shell = "2"
# Native OS confirm/message dialogs (Quit-Maximal? prompt, etc).
# Replaces the previous hand-rolled React modal that fought a
# `tauri://load-end` race when triggered from a hidden window.
tauri-plugin-dialog = "2"
# Enforces a single running Maximal process and routes second-launch
# argv to the first instance. `--replace` in argv triggers a graceful
# shutdown of the existing instance so the second can take :4142.
# `deep-link` feature is opt-in scaffolding for a future deep-link
# integration; it's cheap (no extra runtime cost) and harmless today.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Polls the sidecar's /setup-status endpoint to drive tray state.
# rustls-tls keeps us off OpenSSL; we only talk to 127.0.0.1 but
# reqwest still wants a TLS backend feature.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# `tokio::time::sleep` for the polling loop. Tauri already pulls
# tokio in transitively (its `async_runtime` is built on it); the
# direct dep here is just so we can name `tokio::time` without
# relying on private re-exports.
tokio = { version = "1", features = ["time"] }
# Url parsing for WebviewUrl::External(...) — the settings deep-link
# url builder.
url = "2"

[target.'cfg(unix)'.dependencies]
# `libc::kill` lets us send SIGTERM to the sidecar before falling back
# to SIGKILL — `CommandChild::kill()` from tauri-plugin-shell is
# SIGKILL-only under the hood (see process/mod.rs:78), no good for a
# graceful shutdown.
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Set NSApplication.applicationIconImage at startup so the Dock shows
# the Maximal mark even when running via `cargo run` (which doesn't
# build a .app bundle and therefore has no Info.plist CFBundleIconFile
# for AppKit to read). Same crates Tauri's own macOS code uses; the
# direct dep just lets us name them.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }
